feat: add page layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maksim Efremov - CV</title>
+    <link rel="icon" href="assets/img/favicon.ico">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header class="header">
+        <div class="container header-container">
+            <section class="section profile-section">
+                <img class="profile-photo" src="assets/img/profile-photo-black.jpg" alt="My photo">
+                <div class="profile-title">
+                    <h1 class="main-title   ">Maksim Efremov</h1>
+                    <h3 class="main-subtitle">Junior Front-End Developer</h3>
+                </div>
+            </section>
+        </div>
+    </header>
 
+    <main class="main">
+        <div class="container main-container">
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts
+                </h2>
+                <ul>
+                    <li>
+                        Email:
+                        <a class="contact-link" href="mailto:m.efremov.yu@gmail.com" title="Send me an email!">m.efremov.yu@gmail.com</a>
+                    </li>
+                    <li>
+                        GitHub:
+                        <a class="contact-link" href="https://github.com/maksmaksonchik" target="_blank" title="Check out my projects!">maksmaksonchik</a>
+                    </li>
+                    <li>
+                        Telegram:
+                        <a class="contact-link" href="https://t.me/maksmaksonchik" target="_blank" title="Text me!">@maksmaksonchik</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="section" id="about-me">
+                <h2 class="section-title">About me</h2>
+                <p>
+                    I am studying mathematics and realy love programming. 
+                    I had programming courses in different languages at the 
+                    university and I was good at it. So I decided to try my hand at 
+                    development. Now I'm learning Frontend to get a job.
+                </p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <ul class="skills-list">
+                    <li class="slills-item">HTML&CSS</li>
+                    <li class="slills-item">JavaScript</li>
+                    <li class="slills-item">Git, GitHub</li>
+                    <li class="slills-item">Figma, Adobe Photoshop</li>
+                </ul>
+            </section>
+            <section class="section" id="code-example">
+                <h2 class="section-title">Code Example</h2>
+                <pre class="code-example">
+function factorial(n) {
+  return n ? n * factorial(n - 1) : 1;
+}
+
+console.log(factorial(5));</pre>
+            </section>
+            <!--<section class="section" id="experience">
+                <h2 class="section-title">Experience</h2>
+            </section>-->
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <ul class="education-list">
+                    <li class="education-item">University: UrFU, Mathematics, 2nd year</li>
+                    <li class="education-item">HTML and CSS Tutorials on W3Schools </li>
+                    <li class="education-item">Frontend Courses on HTML Academy</li>
+                    <li class="education-item">RS School JS/Fe Stage#0</li>    
+                </ul>
+            </section>
+            <section class="section" id="languages">
+                <h2 class="section-title">Languages</h2>
+                <ul class="lang-list">
+                    <li class="list-item">Russian - native</li>
+                    <li class="list-item">English - B1</li>
+                </ul>
+            </section>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container footer-container">
+            <p class="copyrigths">
+                © 2022
+                <a class="contact-link author-link" href="https://github.com/maksmaksonchik" target="_blank" title="github.com/maksmaksonchik">
+                    Maksim Efremov
+                </a>
+            </p>
+            <a href="https://rs.school/js-stage0/" class="rss-link" title="RS School">
+                <img class="rss-logo" src="assets/img/rss-logo.svg" alt="RS School logo">
+            </a>
+        </div>
+    </footer>
+</body>
+</html>
