--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="section profile-section">
         <img class="profile-photo" src="assets/img/profile-photo-black.jpg" alt="My photo">
         <div class="profile-title">
-          <h1 class="main-title   ">Maksim Efremov</h1>
+          <h1 class="main-title">Maksim Efremov</h1>
           <h3 class="main-subtitle">Junior Front-End Developer</h3>
         </div>
       </section>
@@ -61,7 +61,7 @@
       <section class="section" id="skills">
         <h2 class="section-title">Skills</h2>
         <ul class="skills-list">
-          <li class="slills-item">HTML&CSS</li>
+          <li class="slills-item">HTML&amp;CSS</li>
           <li class="slills-item">JavaScript</li>
           <li class="slills-item">Git, GitHub</li>
           <li class="slills-item">Figma, Adobe Photoshop</li>
