--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="section" id="skills">
         <h2 class="section-title">Skills</h2>
         <ul class="skills-list">
-          <li class="slills-item">HTML&CSS</li>
+          <li class="slills-item">HTML&amp;CSS</li>
           <li class="slills-item">JavaScript</li>
           <li class="slills-item">Git, GitHub</li>
           <li class="slills-item">Figma, Adobe Photoshop</li>
